# pcomp-experiments

./: .gitignore  README.md  pyproject.toml  run_synthetic_road_traffic_logs.py  slurm_job.sh
control_flow/: convert_ceravolo_logs.py  create_latex_tables.py  create_latex_tables_noisy.py  fix_bose_log.py  generate_figures.py  generate_latex_tables.py  log_settings.yaml  run.py  run_noisy.py  slurm_job.sh  slurm_job_noisy.sh
control_flow/streamlit_analysis/: main.py
control_flow/testing_logs/bose/: README.md
control_flow/testing_logs/ceravolo/: README.md
control_flow/testing_logs/ceravolo/recurring_1000/: README.md
control_flow/testing_logs/ostovar/: README.md
mimic/: README.md  common.py  generate_equiflow_fig.py  low_hemoglobin_analysis.ipynb  normal_hemoglobin_analysis.ipynb  process_results_to_xes.py
mimic/queries/: blood_transfusions_gi_patients.sql  gi_diagnoses.sql  gi_patients.sql  hemoglobin_measurements_gi_patients.sql  icu_outcomes.sql  outcomes.sql
road_traffic_random_splits/: README.md  generate_figures.py  road_traffic_random_splits.toml  run.py  run_bootstrap_cf.py  run_bootstrap_time.py  run_permutation_cf.py  run_permutation_time.py  slurm_job.sh  slurm_job_bootstrap_cf.sh  slurm_job_bootstrap_time.sh  slurm_job_permutation_cf.sh  slurm_job_permutation_time.sh
sensitivity_analysis/: README.md  generate_figures.py  road_traffic_pipeline.toml  run_synthetic_road_traffic_logs.py  run_synthetic_road_traffic_logs_weighted_time.py  slurm_job.sh  slurm_job_weighted_time.sh
sensitivity_analysis/streamlit_analysis/: main.py
sensitivity_analysis/streamlit_analysis/log_analysis/: __init__.py
(+1 files in other folders)
