[tool.poetry]
name = "pcompsyntheticlogruns"
version = "0.1.0"
description = ""
authors = ["Cameron Pitsch <cameron.pitsch@rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
pcomp = {path = "../pcomp/dist/pcomp-0.1.0-py3-none-any.whl"}
numpy = "<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
