[tool.poetry]
name = "pcompsyntheticlogruns"
version = "0.1.0"
description = ""
authors = ["Cameron Pitsch <cameron.pitsch@rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
numpy = "<2.0"
streamlit = "^1.38.0"
pcomp = {path = "../pcomp"}
plotly = "^5.24.1"
pyyaml = "^6.0.2"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
